fixed white space on main page

--- a/finalstyle.css
+++ b/finalstyle.css
@@ -141,7 +141,7 @@ html, body {
 .content {
       width: 80%;
       margin: 0 auto;
-      padding: 80px 0;
+      padding: 57px 0;
       font-family: Helvetica;
 }
 /*
